@@ -2434,3 +2434,6 @@ Added pabopto2bsdf -g option to cull near-grazing scattering to avoid
 issues with noise and negative values.
 
 Increased default dynamic range from 32 to 100 in pcond and normtiff.
+
+Added -o and -n options to genbox to create .OBJ output and segment
+edges and corners for transparent materials.
